# brig-telegram

./: CLAUDE.md  Cargo.toml  Makefile  README.md  manifest.toml
.tickets/: P10-04-telegram-ureq-features.md  P5-03-telegram-user-allowlist.md  WAVES.md  bt-8v0s.md  bt-hxj5.md  bt-p0rt.md  telegram-01-token-auth.md  telegram-02-rcd-token-exposure.md  telegram-03-help-version.md  telegram-04-user-allowlist.md  telegram-05-bounded-reads.md  telegram-06-socket-timeout.md  telegram-07-ureq-features.md  telegram-08-destdir.md  telegram-09-message-splitting.md  telegram-10-version-env.md  telegram-11-help-stdout.md  telegram-12-help-control-flow.md  telegram-13-sysexits.md  telegram-14-readme-env-docs.md  telegram-15-token-required-mismatch.md  telegram-16-dead-constant.md  telegram-17-guide-skill-add-syntax.md  telegram-18-guide-line-count.md
contrib/: manifest-ops.toml  manifest-support.toml
docs/: GUIDE.md  POST_V01_CONTEXT.md
port/: Makefile  distinfo  pkg-descr  pkg-message  pkg-plist
scripts/rc.d/: brig_telegram
src/: main.rs
