[package]
name = "brig-telegram"
version = "0.1.3"
edition = "2021"
authors = ["Jim Spring <jim@salish.systems>"]
description = "Telegram Bot API gateway for Brig"
license = "BSD-2-Clause"

[dependencies]
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
